sumo/tests/netconvert/import/XML/errors/xml_looped_edge/options.netconvert
--edge-files=input_edges.edg.xml --output=net.net.xml -n input_nodes.nod.xml
